{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 547,
  "lineage": "7d51a92d-994e-4ba1-6ba2-39c8602f7b34",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_eip",
      "name": "server_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06578d4fe1c4540bf",
            "association_id": "eipassoc-010c8d810e7695261",
            "domain": "vpc",
            "id": "eipalloc-06578d4fe1c4540bf",
            "instance": "i-03fbef2fd35de0774",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ce8ad47cb9dcb4ad",
            "private_dns": "ip-10-0-1-37.ec2.internal",
            "private_ip": "10.0.1.37",
            "public_dns": "ec2-44-194-104-69.compute-1.amazonaws.com",
            "public_ip": "44.194.104.69",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Devops_A1"
            },
            "tags_all": {
              "Name": "Devops_A1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2_instance.aws_instance.my_vm",
            "module.ec2_instance.aws_key_pair.my_kp",
            "module.ec2_instance.data.aws_ami.ubuntu",
            "module.security_group.aws_security_group.my_sg",
            "module.vpc.aws_subnet.my_public_subnet",
            "module.vpc.aws_vpc.my_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0070c5311b7677678",
            "arn": "arn:aws:ec2:us-east-1:802123652257:instance/i-03fbef2fd35de0774",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03fbef2fd35de0774",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "my_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ce8ad47cb9dcb4ad",
            "private_dns": "ip-10-0-1-37.ec2.internal",
            "private_ip": "10.0.1.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f3ad91fe1bf675ca",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d8f30899afca0054",
            "tags": {
              "Name": "Devops_A1"
            },
            "tags_all": {
              "Name": "Devops_A1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0779e72ccf82924c0"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_key_pair.my_kp",
            "module.ec2_instance.data.aws_ami.ubuntu",
            "module.security_group.aws_security_group.my_sg",
            "module.vpc.aws_subnet.my_public_subnet",
            "module.vpc.aws_vpc.my_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802123652257:security-group/sg-0779e72ccf82924c0",
            "description": "Security group for the instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0779e72ccf82924c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through port 8080-will be used for jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through port 8888-will be used for petclinic",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through port 9000-will be used for SonarQube",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "my_sg",
            "name_prefix": "",
            "owner_id": "802123652257",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Devops_A1"
            },
            "tags_all": {
              "Name": "Devops_A1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfd976faa24ed607"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802123652257:internet-gateway/igw-0ae59f94f7a711b31",
            "id": "igw-0ae59f94f7a711b31",
            "owner_id": "802123652257",
            "tags": {
              "Name": "Devops_A1"
            },
            "tags_all": {
              "Name": "Devops_A1"
            },
            "vpc_id": "vpc-0dfd976faa24ed607"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802123652257:route-table/rtb-0183080303d24c82d",
            "id": "rtb-0183080303d24c82d",
            "owner_id": "802123652257",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ae59f94f7a711b31",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dfd976faa24ed607"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b73d564ce93778f8",
            "route_table_id": "rtb-0183080303d24c82d",
            "subnet_id": "subnet-0d8f30899afca0054"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.my_public_rt",
            "module.vpc.aws_subnet.my_public_subnet",
            "module.vpc.aws_vpc.my_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802123652257:subnet/subnet-0d8f30899afca0054",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8f30899afca0054",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "802123652257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Devops_A1"
            },
            "tags_all": {
              "Name": "Devops_A1"
            },
            "vpc_id": "vpc-0dfd976faa24ed607"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:802123652257:vpc/vpc-0dfd976faa24ed607",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ece3665e21fc68ca",
            "default_route_table_id": "rtb-050bc5bc8a1f52c42",
            "default_security_group_id": "sg-0405e5f2705f9d39b",
            "dhcp_options_id": "dopt-0f9df040c08d15b13",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0dfd976faa24ed607",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-050bc5bc8a1f52c42",
            "owner_id": "802123652257",
            "tags": {
              "Name": "Devops_A1"
            },
            "tags_all": {
              "Name": "Devops_A1"
            }
          }
        }
      ]
    }
  ]
}